corrected tab alignment mobile view, projects page

--- a/style.css
+++ b/style.css
@@ -390,6 +390,19 @@ body a:active {
   width: 47%;
 }
 
+@media only screen and (max-width: 320px) {
+  .project_tabs .nav-tabs > li > a {
+    font-size: 12px !important;
+    padding: 10px 7px;
+  }
+}
+
+@media only screen and (min-width: 330px) and (max-width: 375px) {
+  .project_tabs .nav-tabs > li > a {
+    padding: 10px 7px !important;
+  }
+}
+
 @media only screen and (max-width: 900px) {
   .width_100, .content_6 .border_curved, .suggestion_form .mask,
   .suggestion_form .form {
